Add Celery, Flower, and Redis for Background Task Management
- Integrated Celery for asynchronous task management in Keppler.
- Configured Redis as both the broker and result backend for Celery.
- Set up Flower for monitoring Celery tasks and worker status.
- Adjusted Django settings and environment variables to support Celery and Redis integration.
- Updated Docker configurations to include Celery worker and Flower services.
- Downgraded Celery to version 4.4.7 and Flower to 0.9.7 due to compatibility and stability concerns with newer versions.
- Included Watchdog for file system monitoring.
- Updated requirements.txt with specific versions of Celery, Flower, Redis, and other dependencies.

--- a/keppler-src/docker-compose.yml
+++ b/keppler-src/docker-compose.yml
@@ -16,6 +16,7 @@ services:
             - .env
         depends_on:
             - postgres-db
+            - redis
         networks:
           - keppler-react
 
@@ -31,6 +32,43 @@ services:
             - POSTGRES_DB=${POSTGRES_DB}
         networks:
           - keppler-react
+    
+    redis:
+        image: redis:7.2-alpine
+        networks:
+            - keppler-react
+    
+    celery_worker:
+        build:
+            context: .
+            dockerfile: ./docker/local/django/Dockerfile
+        command: /start-celeryworker
+        volumes:
+            - .:/app
+        env_file:
+            - .env
+        depends_on:
+            - redis
+            - postgres-db
+        networks:
+            - keppler-react
+    
+    flower:
+        build:
+            context: .
+            dockerfile: ./docker/local/django/Dockerfile
+        command: /start-flower
+        volumes:
+            - .:/app
+        env_file:
+            - .env
+        ports:
+            - "5557:5555"
+        depends_on:
+            - redis
+            - postgres-db
+        networks:
+            - keppler-react
     
     nginx:
         restart: always
