--- a/keppler-src/requirements.txt
+++ b/keppler-src/requirements.txt
@@ -4,6 +4,7 @@ django-environ==0.10.0
 django-filter==23.5
 django-autoslug==1.9.9
 django-countries==7.5.1
+django-cities-light==3.10.1
 Pillow==10.1.0
 django-phonenumber-field==7.2.0
 phonenumbers==8.13.26
